header, footer, 1/2 banner

--- a/index.html
+++ b/index.html
@@ -7,17 +7,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venarus</title>
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c34be4dd92.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="container header__wrap">
-
+            <div class="header__left">
+                <a class="logo" href="index.html">
+                    <img src="icons/logo.svg" alt="Венарус">
+                </a>
+            </div>
+            <div class="header__right">
+                <div class="search">
+                    <img src="icons/search.svg" alt="Поиск">
+                </div>
+                <div class="shops">
+                    <img src="icons/shops.svg" alt="Где купить">
+                </div>
+                <div class="burger__menu">
+                    <img src="icons/menu.svg" alt="Меню">
+                </div>
+            </div>
         </div>
     </header>
-    <main></main>
+
+    <main>
+        <section class="banner">
+            <div class="container banner__wrap">
+                <div class="banner__left">
+                    <h1 class="banner__title">НАДЕЖНЫЙ ПОМОЩНИК В ЛЕЧЕНИИ ВАРИКОЗА</h1>
+                    <div class="banner__buttons">
+                        <div class="banner__btn">
+                            <img src="icons/play.svg" alt="Схема приема">
+                            <a class="banner__link" href="#">Схема приема</a>
+                        </div>
+                        <div class="banner__btn">
+                            <img src="icons/arrow.svg" alt="Инструкция">
+                            <a class="banner__link" href="#">Инструкция</a>
+                        </div>
+                        <div class="banner__btn">
+                            <img src="icons/banner_shop.svg" alt="Где купить">
+                            <a class="banner__link" href="#">Где купить</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner__right">
+                    <div class="slider">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <footer>
-        <div class="container footer__wrap">
+        <div class="footer__wrap">
+            <div class="footer__top">
+                <div class="footer__content">
+                    <p>БИОЛОГИЧЕСКИ АКТИВНАЯ ДОБАВКА. НЕ ЯВЛЯЕТСЯ ЛЕКАРСТВОМ</p>
+                </div>
+            </div>
+
+            <div class="footer__bottom">
+                <div class="footer__left">
+                    <div class="footer__link">
+                        <a href="#">Сообщить о нежелательном явлении</a>
+                    </div>
+
+                    <div class="footer__box">
+                        <img src="images/footer_logo.png" alt="">
+                        <p>© АО «ФП «Оболенское» 2011 – 2020 г.</p>
+                    </div>
+                </div>
+                <div class="footer__center">
+                    <div class="footer__link">
+                        <a href="#">Условия пользования сайтом и файлами Cookies</a>
+                    </div>
+                    <p class="footer__address">г. Москва, ул. Шаболовка, д. 31, стр. 11, 4 этаж Телефон/факс: +7 (495) 646-28-68</p>
+                </div>
+                <div class="footer__right">
+                    <div class="footer__socials">
+                        <a class="vk" href="https://vk.com/"><i class="fab fa-vk"></i></a>
+                        <a class="fb" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+                        <a class="twi" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                        <a class="ok" href="https://ok.ru/"><i class="fab fa-odnoklassniki-square"></i></a>
+                        <a class="last" href="#"><i class="fas fa-square"></i></a>
+                    </div>
+                    <div class="footer__box">
+                        <img src="icons/logo_studio.svg" alt="">
+                        <p class="socials__text">Создание сайтов<br>Фарм-студия №1 в Рунете</p>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
     </footer>
