about + process + opinion + blog 1/2

--- a/index.html
+++ b/index.html
@@ -62,6 +62,173 @@
                 </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container about__wrap">
+                <div class="about__top">
+                    <div class="about__top__group">
+                        <img src="icons/circle.svg" alt="circle">
+                        <p>Доказанная эффективность</p>
+                    </div>
+                    <div class="about__top__group">
+                        <img src="icons/square.svg" alt="square">
+                        <p>Новая дозировка 100 мг + 900 мг</p>
+                    </div>
+                    <div class="about__top__group">
+                        <img src="icons/pill.svg" alt="pill">
+                        <p>Удобный прием. Одна таблетка в сутки*</p>
+                        <!-- <div class="info">
+                            <img class="info__img" src="icons/info.svg" alt="info">
+                        </div> -->
+                    </div>
+
+
+                </div>
+
+                <div class="about__bottom">
+                    <div class="about__content">
+                        <h2>Комплексное действие</h2>
+                        <p>Венарус показан для терапии симптомов хронических заболеваний вен (устранения и облегчения симптомов).</p>
+                    </div>
+
+                    <div class="about__box">
+                        <div class="about__group">
+                            <button class="about__btn">Подробнее ></button>
+                            <svg width="134" height="135" viewBox="0 0 134 135" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="67" cy="67.0076" r="67" fill="#590D56"/>
+                                <path d="M78.3316 12.8502L78.49 12.9515L78.6759 12.9234L91.9762 10.91L99.3797 22.1413L99.4832 22.2983L99.6645 22.3482L112.634 25.9186L114.829 39.1902L114.86 39.3757L115.005 39.495L125.401 48.0319L122.008 61.049L121.961 61.2309L122.045 61.399L128.07 73.4263L119.676 83.9381L119.559 84.085L119.567 84.2728L120.18 97.7108L108.236 103.9L108.069 103.986L108 104.161L103.094 116.686L89.6655 117.482L89.4778 117.493L89.3439 117.626L79.7671 127.072L67.176 122.337L67 122.271L66.824 122.337L54.2329 127.072L44.6561 117.626L44.5222 117.493L44.3345 117.482L30.9062 116.686L25.9996 104.161L25.9311 103.986L25.7641 103.9L13.8205 97.7108L14.4325 84.2728L14.4411 84.085L14.3238 83.9381L5.92995 73.4263L11.9548 61.399L12.039 61.2309L11.9916 61.049L8.599 48.0319L18.9949 39.495L19.1402 39.3757L19.1709 39.1902L21.3661 25.9186L34.3355 22.3482L34.5168 22.2983L34.6203 22.1413L42.0237 10.91L55.3241 12.9234L55.51 12.9515L55.6684 12.8502L67 5.60113L78.3316 12.8502Z" stroke="white"/>
+                                </svg>
+                            <p>Помогает предотвратить судороги</p>
+                        </div>
+
+                        <div class="about__group">
+                            <button class="about__btn">Подробнее ></button>
+                            <svg class="second" width="140" height="138" viewBox="0 0 140 138" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="72" cy="69.0076" r="67" fill="#590D56"/>
+                                <path d="M20.415 137.492C38.9482 132.21 79.9407 110.566 95.6458 66.2468C111.351 21.9274 113.711 4.02745 112.928 0.617391" stroke="white"/>
+                                <path d="M1.37262 126.723C3.83215 118.326 14.7349 98.438 38.6698 86.0604C68.5883 70.5885 113.669 69.0851 138.848 36.3856" stroke="white"/>
+                                </svg>
+                            <p>Способствует снижению тяжести в ногах</p>
+                        </div>
+
+                        <div class="about__group">
+                            <button class="about__btn">Подробнее ></button>
+                            <svg class="third" width="134" height="135" viewBox="0 0 134 135" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M134 67.0076C134 104.011 104.003 134.008 67 134.008C29.9969 134.008 0 104.011 0 67.0076C0 30.0045 29.9969 0.00756836 67 0.00756836C104.003 0.00756836 134 30.0045 134 67.0076Z" fill="#590D56"/>
+                                <path d="M90.5 67.0076C90.5 79.9863 79.9787 90.5076 67 90.5076C54.0213 90.5076 43.5 79.9863 43.5 67.0076C43.5 54.0289 54.0213 43.5076 67 43.5076C79.9787 43.5076 90.5 54.0289 90.5 67.0076Z" stroke="white"/>
+                                <path d="M71.5 67.0076C71.5 69.4928 69.4853 71.5076 67 71.5076C64.5147 71.5076 62.5 69.4928 62.5 67.0076C62.5 64.5223 64.5147 62.5076 67 62.5076C69.4853 62.5076 71.5 64.5223 71.5 67.0076Z" stroke="white"/>
+                                </svg>
+                            <p>Способствует снижению болевых ощущений</p>
+                        </div>
+
+                        <div class="about__group">
+                            <button class="about__btn">Подробнее ></button>
+                            <svg class="fourth" width="135" height="134" viewBox="0 0 135 134" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="67" cy="67" r="67" fill="#590D56"/>
+                                <path d="M134 6.99989C107.49 7.09997 86.1022 34.2677 86.2284 67.6807C86.3545 101.094 107.947 128.099 134.456 127.999" stroke="white"/>
+                                <path d="M0 129C26.5097 129 48 101.913 48 68.5C48 35.0868 26.5097 8 0 8" stroke="white"/>
+                                </svg>
+                            <p>Помогает уменьшить отеки</p>
+                        </div>
+
+                        <div class="about__group">
+                            <button class="about__btn">Подробнее ></button>
+                            <svg width="136" height="135" viewBox="0 0 136 135" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="68" cy="67.0076" r="67" fill="#590D56"/>
+                                <path d="M135 67.0076L57 67.0076" stroke="white"/>
+                                <path d="M101.5 102.008L135 67.0076L101.5 35.0076" stroke="white"/>
+                                <line x1="1" y1="67.0076" x2="59" y2="67.0076" stroke="white"/>
+                                <path d="M34.5 32.0076L0.999998 67.0076L34.5 99.0076" stroke="white"/>
+                                </svg>
+                            <p>Оказывает ангиопротекторное и венотонизурующее действие</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="process">
+            <div class="container process__wrap">
+                <div class="process__content">
+                    <h3>О производстве Венарус</h3>
+                </div>
+                <div class="process__slider">
+                    <div class="slider__top">
+                        <img src="images/process_2.png" alt="">
+                        <img class="second" src="images/process_1.png" alt="">
+                        <svg class="play" width="67" height="67" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="33.5" cy="33.5" r="33" stroke="#47093E"/>
+                            <path d="M25.96 20.4403L48.58 33.4999L25.96 46.5596L25.96 20.4403Z" stroke="#47093E"/>
+                            </svg>
+
+                        <div class="slider__btn">
+                            <svg class="arrow__left" width="68" height="69" viewBox="0 0 68 69" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="33.9999" cy="34.0074" r="33.4999" transform="rotate(-180 33.9999 34.0074)" stroke="white"/>
+                                <path d="M38.0796 20.4073L24.4796 34.0073L38.0796 47.6072" stroke="white"/>
+                                </svg>
+                            <svg class="arrow__right" width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="34.0002" cy="34" r="33.5" stroke="white"/>
+                                    <path d="M29.9203 47.5999L43.5203 33.9999L29.9203 20.3999" stroke="white"/>
+                                </svg>
+                        </div>
+                    </div>
+
+                    <div class="slider__bottom">
+                        <a href="#">Подробнее ></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="opinion">
+            <div class="container opinion__wrap">
+                <div class="opinion__content">
+                    <h4>Мнение специалистов</h4>
+                    <p>Фармакотерапия — неотъемлемый компонент современного лечения хронического заболевания вен.</p>
+                </div>
+                <div class="opinion__box">
+                    <img src="images/opinion.png" alt="">
+                    <svg class="play" width="67" height="67" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="33.5" cy="33.5" r="33" stroke="#47093E"/>
+                        <path d="M25.96 20.4403L48.58 33.4999L25.96 46.5596L25.96 20.4403Z" stroke="#47093E"/>
+                        </svg>
+                    <div class="opinion__btn">
+                        <svg class="btn" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle r="7.5" transform="matrix(1 0 0 -1 8 8)" stroke="#47093E"/>
+                            </svg>
+                        <svg class="btn" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle r="7.5" transform="matrix(1 0 0 -1 8 8)" stroke="#47093E"/>
+                            </svg>
+                        <svg class="btn" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle r="7.5" transform="matrix(1 0 0 -1 8 8)" stroke="#47093E"/>
+                            </svg>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="blog">
+            <div class="container blog__wrap">
+                <div class="blog__content">
+                    <h5>Полезная информация</h5>
+                    <p>ВЕНАРУС — надежный помощник в лечении варикоза, хранитель женских ног на пути к ее мечте!</p>
+                </div>
+
+                <div class="blog__box">
+                    <div class="blog__item blog__item--sport">
+                        <p>Профилак- тические упражнения</p>
+                    </div>
+                    <div class="blog__item blog__item--doc">
+                        <p>Диагностика и способы лечения</p>
+                    </div>
+                    <div class="blog__item blog__item--food">
+                        <p>Рекомен- дации по питанию </p>
+                    </div>
+                    <div class="blog__item blog__item--bg">
+                        <p>Факты о варикозе</p>
+                    </div>
+                </div>
+            </div>
+        </section> -->
     </main>
 
     <footer>
