--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/swiper@7.3.1/swiper-bundle.min.css">
-
     <script src="https://kit.fontawesome.com/c34be4dd92.js" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/swiper@7.3.1/swiper-bundle.min.js"></script>
-    <script src="js/all.js"></script>
-
 </head>
 
 <body>
@@ -23,22 +18,23 @@
         <div class="container header__wrap">
             <div class="header__left">
                 <a class="logo" href="index.html">
-                    <img src="icons/logo.svg" alt="Венарус">
+                    <img class="laptop" src="icons/logo.svg" alt="Венарус">
+                    <img class="mobile" src="icons/logo-mobile.svg" alt="">
                 </a>
             </div>
             <div class="header__right">
                 <input id="burger" type="checkbox">
-                <label class="header__menu" for="burger"><svg width="68" height="45" viewBox="0 0 68 45" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 4.4837C6.3473 2.88065 14.9897 1.17301 21.32 2.8695C30.8501 5.4235 38.9139 13.6762 52.957 11.1048C58.5783 10.0755 63.3366 8.24065 67 6.36585" stroke="#47093E" stroke-width="3"/>
-                    <path d="M1 20.1028C6.3473 18.4998 14.9897 16.7922 21.32 18.4886C30.8501 21.0426 38.9139 29.2954 52.957 26.724C58.5783 25.6947 63.3366 23.8598 67 21.985" stroke="#47093E" stroke-width="3"/>
-                    <path d="M1 35.7217C6.3473 34.1187 14.9897 32.411 21.32 34.1075C30.8501 36.6615 38.9139 44.9143 52.957 42.3429C58.5783 41.3136 63.3366 39.4787 67 37.6039" stroke="#47093E" stroke-width="3"/>
-                    </svg></label>
+                <label class="header__menu" for="burger">
+                    <img class="laptop" src="icons/menu.svg" alt="">
+                    <img class="mobile" src="icons/menu-mobile.svg" alt="">
+                </label>
 
                 <nav class=" header__nav nav">
                     <div class="nav__wrap">
-                        <label class="nav__close" for="burger"><svg width="68" height="13" viewBox="0 0 68 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 4.31695C6.3473 2.7139 14.9897 1.00626 21.32 2.70275C30.8501 5.25675 38.9139 13.5095 52.957 10.9381C58.5783 9.9088 63.3366 8.0739 67 6.19911" stroke="#47093E" stroke-width="3"/>
-                            </svg></label>
+                        <label class="nav__close" for="burger">
+                            <img class="laptop" src="icons/menu_close.svg" alt="">
+                            <img class="mobile" src="icons/menu_close-mobile.svg" alt="">
+                        </label>
                         <ul class="nav__items">
                             <li class="nav__item">
                                 <p class="nav__text">Где купить</p>
@@ -74,10 +70,12 @@
                 </nav>
 
                 <div class="search">
-                    <img src="icons/search.svg" alt="Поиск">
+                    <img class="laptop" src="icons/search-laptop.svg" alt="Поиск">
+                    <img class="mobile" src="icons/search-mobile.svg" alt="">
                 </div>
                 <div class="shops">
-                    <img src="icons/shops.svg" alt="Где купить">
+                    <img class="laptop" src="icons/shops-laptop.svg" alt="Где купить">
+                    <img class="mobile" src="icons/shops-mobile.svg" alt="">
                 </div>
             </div>
         </div>
@@ -87,7 +85,8 @@
         <section class="banner">
             <div class="container banner__wrap">
                 <div class="banner__img">
-                    <img src="images/bg_banner.png" alt="">
+                    <img class="laptop" src="images/bg_banner.png" alt="">
+                    <img class="mobile" src="images/bg_banner-mobile.png" alt="">
                 </div>
                 <div class="banner__content">
                     <h1 class="banner__title">Надежный помощник в лечении варикоза</h1>
@@ -108,18 +107,15 @@
                 </div>
                 <div class="banner__slider">
                     <div class="slider__img">
-                        <img src="images/pills__banner.png" alt="">
+                        <img class="laptop" src="images/pills__banner.png" alt="">
+                        <img class="mobile" src="images/pill.png" alt="">
                     </div>
                     <div class="slider__buttons">
                         <div class="arrows">
-                            <svg width="68" height="69" viewBox="0 0 68 69" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="33.9999" cy="34.0074" r="33.4999" transform="rotate(-180 33.9999 34.0074)" stroke="white"/>
-                            <path d="M38.0796 20.4073L24.4796 34.0073L38.0796 47.6072" stroke="white"/>
-                            </svg>
-                            <svg width="68" height="68" viewBox="0 0 68 68" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="34.0002" cy="34" r="33.5" stroke="white"/>
-                            <path d="M29.9203 47.5999L43.5203 33.9999L29.9203 20.3999" stroke="white"/>
-                            </svg>
+                            <img class="laptop" src="icons/arrow_left.svg" alt=" ">
+                            <img class="mobile" src="icons/arrow-left-mobile.svg" alt="">
+                            <img class="laptop" src="icons/arrow_right.svg" alt="">
+                            <img class="mobile" src="icons/arrow-right-mobile.svg" alt="">
                         </div>
                         <a href="#" class="btn btn-white">Где купить ></a>
                     </div>
@@ -127,9 +123,9 @@
             </div>
         </section>
 
-        <section class="marquee">
+        <!-- <section class="marquee">
             <p class="marquee__text"><span>получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>></span></p>
-        </section>
+        </section> -->
 
         <section class="about">
             <div class="container about__wrap">
