--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
             </div>
         </section>
 
-        <!-- <section class="marquee">
+        <section class="marquee">
             <p class="marquee__text"><span>получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>> получить скидку 10% >>></span></p>
-        </section> -->
+        </section>
 
         <section class="about">
             <div class="container about__wrap">
