--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
               </div>
               <div class="about__btn">
                 <img src="icons/about_shop.svg" alt="Где купить" />
+                <!-- <svg class="icon">
+                  <use xlink:href="sprite.svg#about__shop"></use>
+                </svg> -->
+
                 <a class="about__link" href="#">Где купить</a>
               </div>
             </div>
@@ -158,7 +162,7 @@
                 <img class="laptop" src="icons/arrow_right.svg" alt="" />
                 <img class="mobile" src="icons/arrow-right-mobile.svg" alt="" />
               </div>
-              <a href="#" class="btn btn-white">Где купить ></a>
+              <a href="#" class="link link_white">Где купить ></a>
             </div>
           </div>
         </div>
@@ -176,16 +180,16 @@
 
       <section class="features">
         <div class="container features__wrap">
-          <div class="features__top">
-            <div class="features__top__group">
+          <div class="features__columns">
+            <div class="features__column">
               <img src="icons/circle.svg" alt="circle" />
               <p>Доказанная эффективность</p>
             </div>
-            <div class="features__top__group">
+            <div class="features__column">
               <img src="icons/square.svg" alt="square" />
               <p>Новая дозировка 100 мг + 900 мг</p>
             </div>
-            <div class="features__top__group">
+            <div class="features__column">
               <img src="icons/pill.svg" alt="pill" />
               <p>Удобный прием. Одна таблетка в сутки*</p>
             </div>
@@ -404,7 +408,7 @@
                 </svg>
               </div>
             </div>
-            <a class="btn btn-white" href="#">Подробнее ></a>
+            <a class="link link_white" href="#">Подробнее ></a>
           </div>
         </div>
       </section>
@@ -510,7 +514,7 @@
                 <p>Факты о варикозе</p>
               </div>
             </div>
-            <a class="btn btn-purple" href="#">Подробнее ></a>
+            <a class="link link_purple" href="#">Подробнее ></a>
           </div>
         </div>
       </section>
@@ -529,9 +533,9 @@
               <img src="images/pills.png" alt="" />
             </div>
             <div class="shop__buttons">
-              <a href="#" class="btn btn-purple">apteka.ru</a>
-              <a href="#" class="btn btn-purple">366.ru</a>
-              <a href="#" class="btn btn-purple">stolichki.ru</a>
+              <a href="#" class="link link_purple">366.ru</a>
+              <a href="#" class="link link_purple">stolichki.ru</a>
+              <a href="#" class="link link_purple">apteka.ru</a>
             </div>
           </div>
         </div>
@@ -590,5 +594,12 @@
         </div>
       </div>
     </footer>
+
+    <object
+      type="image/svg+xml"
+      data="sprite.svg"
+      width="0"
+      height="0"
+    ></object>
   </body>
 </html>
