--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <main>
       <section class="about">
         <div class="container about__wrap">
-          <div class="about__img">
+          <div class="about__bg">
             <img class="laptop" src="images/bg_about.png" alt="" />
             <img class="mobile" src="images/bg_about-mobile.png" alt="" />
           </div>
@@ -142,10 +142,6 @@
               </div>
               <div class="about__btn">
                 <img src="icons/about_shop.svg" alt="Где купить" />
-                <!-- <svg class="icon">
-                  <use xlink:href="sprite.svg#about__shop"></use>
-                </svg> -->
-
                 <a class="about__link" href="#">Где купить</a>
               </div>
             </div>
@@ -346,7 +342,7 @@
 
       <section class="process">
         <div class="container process__wrap">
-          <div class="process__img">
+          <div class="process__bg">
             <img src="images/process_bg.png" alt="" />
           </div>
           <div class="process__content">
@@ -488,7 +484,7 @@
 
       <section class="blog">
         <div class="container blog__wrap">
-          <div class="blog__img">
+          <div class="blog__bg">
             <img src="images/blog_bg.png" alt="" />
           </div>
           <div class="blog__content">
@@ -594,12 +590,5 @@
         </div>
       </div>
     </footer>
-
-    <object
-      type="image/svg+xml"
-      data="sprite.svg"
-      width="0"
-      height="0"
-    ></object>
   </body>
 </html>
